--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-This channel is an excellent resource for anyone interested in learning about
-the fascinating world of computing. Channel will cover a wide range of topics
-related to computer science, including programming languages, algorithms, data
-structures, machine learning, artificial intelligence, computer architecture,
-operating systems, software engineering, and much more. The videos would use
-real-world examples and visual aids to illustrate abstract concepts, making them
-accessible to viewers of all levels of expertise. The channel will also feature
-interviews with leading experts in the field of computer science, who would
-share their insights and experiences with the audience. Additionally, the
-channel could host live Q&A sessions and interactive coding sessions to help
-viewers improve their skills and deepen their understanding of the subject
-matter.
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -239,8 +226,21 @@ matter.
                   <h4 class="h4 service-item-title">Web design</h4>
 
                   <p class="service-item-text">
-                    The most modern and high-quality design made at a
-                    professional level.
+                    This channel is an excellent resource for anyone interested
+                    in learning about the fascinating world of computing.
+                    Channel will cover a wide range of topics related to
+                    computer science, including programming languages,
+                    algorithms, data structures, machine learning, artificial
+                    intelligence, computer architecture, operating systems,
+                    software engineering, and much more. The videos would use
+                    real-world examples and visual aids to illustrate abstract
+                    concepts, making them accessible to viewers of all levels of
+                    expertise. The channel will also feature interviews with
+                    leading experts in the field of computer science, who would
+                    share their insights and experiences with the audience.
+                    Additionally, the channel could host live Q&A sessions and
+                    interactive coding sessions to help viewers improve their
+                    skills and deepen their understanding of the subject matter.
                   </p>
                 </div>
               </li>
