--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               <div class="contact-info">
                 <p class="contact-title">Email</p>
 
-                <a href="mailto:richard@example.com" class="contact-link"
-                  >richard@example.com</a
+                <a href="mailto:varun@cswithvarun.com" class="contact-link"
+                  >varun@cswithvarun.com</a
                 >
               </div>
             </li>
@@ -567,40 +567,26 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  University school of the arts
+                  Bharati Vidyapeeth's Institute of Computer Applications and
+                  Management (BVICAM)
                 </h4>
 
-                <span>2007 — 2008</span>
+                <span>2014 — 2017</span>
 
                 <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
+                  Studied computer application and multiple subjects:
+                  Programming, Algorithms, Networking, Database, Linux etc
                 </p>
               </li>
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">New york academy of art</h4>
 
-                <span>2006 — 2007</span>
+                <span>2010 — 2013</span>
 
                 <p class="timeline-text">
-                  Ratione voluptatem sequi nesciunt, facere quisquams facere
-                  menda ossimus, omnis voluptas assumenda est omnis..
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">
-                  High school of art and design
-                </h4>
-
-                <span>2002 — 2004</span>
-
-                <p class="timeline-text">
-                  Duis aute irure dolor in reprehenderit in voluptate, quila
-                  voluptas mag odit aut fugit, sed consequuntur magni dolores
-                  eos.
+                  Studied computer application and multiple subjects:
+                  Programming, Computer Organizations, Database, etc.
                 </p>
               </li>
             </ol>
@@ -617,38 +603,110 @@
 
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Creative director</h4>
+                <h4 class="h4 timeline-item-title">DevOps R & D Lead</h4>
 
-                <span>2015 — Present</span>
+                <span>2022 — Present</span>
 
                 <p class="timeline-text">
-                  Nemo enim ipsam voluptatem blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et qvuas molestias
-                  exceptur.
+                  <li>
+                    Developing and implementing research strategies, and plans
+                    to support the organization's goals and objectives.
+                  </li>
+                  <li>
+                    Identifying potential risks and challenges associated with
+                    R&D projects and developing mitigation strategies.
+                  </li>
+                  <li>
+                    Leading a team of DevOps engineers, developers, and other
+                    professionals who are involved in DevOps R&D activities.
+                  </li>
+                  <li>
+                    Leading the design, implementation, and maintenance of
+                    DevOps infrastructure and tools, such as continuous
+                    integration and deployment (CI/CD) pipelines, monitoring and
+                    logging systems, and automation frameworks.
+                  </li>
                 </p>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Art director</h4>
+                <h4 class="h4 timeline-item-title">Sr DevOps Engineer</h4>
 
-                <span>2013 — 2015</span>
+                <span>2019 — 2022</span>
 
                 <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
+                  <li>
+                    Shadi.com: Worked on shadi.com, managed their paltform for a
+                    quarter and improved deployment pipeline. Worked on AWS,
+                    Ansible, python and bash scripting, gitlab pipelines.
+                  </li>
+                  <li>
+                    Created a small project on ETL pipeline on AWS using S3,
+                    EC2, Lambda, RDS, and CloudWatch. Entire process was
+                    completely automated from data injestion to report
+                    generation.
+                  </li>
+                  <li>
+                    Bukalapak: Modernised and Migrated their legacy applications
+                    running on DataCentre to GCP on GKE clusters. Migrated
+                    around 30 microservices with zero down time. It was a really
+                    challenging project as taking down time was really tight
+                    during migration and applications were legacy application.
+                    Tools and technologies used were GCP, ELK Stack, Prometheus
+                    and Grafana Stack, Datadog, Cassandra Database, Kafka
+                    messaging system.
+                  </li>
+                  <li>
+                    Tokopedia: Worked on serivce migration. Wrote complete
+                    automation for service discovery as that was very crucial
+                    for service migration. As applications were legacy and
+                    nobody knew which service was connecting to what other
+                    service. Automation provided a really good view what
+                    component was talking to what. Automation mainly parsed
+                    application config files and network going in and out from
+                    application machines. Ansible, Python, Google Biq Query were
+                    heavily used.
+                  </li>
+                  <li>
+                    Coinswitch: Converted entire infrastructure to IAC using
+                    terraform. Converted their application pipelines from
+                    Jenkins toCLoud based build solution. It was also really
+                    challenging as we had to import existing infrastructure into
+                    IAC. Worked on IAC and Cloud Native Build and Deployment
+                    solution.
+                  </li>
+                  <li>
+                    Letsbloom: Worked as DevOps and Developement Delivery head.
+                    It was a really challenging project as I never worked on
+                    business side of thing apart from technical things. Worked
+                    360 degree on plaform. Wrote automation scripts for testing
+                    platform using REST API and Python. Improved IAC and build
+                    and Deployment pipeline. Improved security of platform.
+                    Developed few application for performing batch jobs. Worked
+                    on multi cloud AWS, Azure, and GCP. Used terraform and
+                    ansible heavily for automation and bash and python were also
+                    used heavily for automation. Used Self managed ELK and
+                    Prometheus stack, Hashicorp vault and lots of other tech
+                    stack. Can't discolse everything here
+                  </li>
                 </p>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Web designer</h4>
+                <h4 class="h4 timeline-item-title">DevOps Engineer</h4>
 
-                <span>2010 — 2013</span>
+                <span>2016 — 2018</span>
 
                 <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
+                  <li>
+                    Worked on ESIM for Vodafone UK. That was really challenging
+                    project as it was my first project. Worked heavily on AWS,
+                    Terraform, Jenkins, Ansible, python and bash scripting.
+                    Completely automated Build and Deployment pipelien.
+                    Implemented Logging using ELK and monitoring using
+                    CloudWatch.
+                  </li>
+                  <li></li>
                 </p>
               </li>
             </ol>
