--- a/index.html
+++ b/index.html
@@ -608,24 +608,21 @@
                 <span>2022 — Present</span>
 
                 <p class="timeline-text">
-                  <li>
-                    Developing and implementing research strategies, and plans
-                    to support the organization's goals and objectives.
-                  </li>
-                  <li>
-                    Identifying potential risks and challenges associated with
-                    R&D projects and developing mitigation strategies.
-                  </li>
-                  <li>
-                    Leading a team of DevOps engineers, developers, and other
-                    professionals who are involved in DevOps R&D activities.
-                  </li>
-                  <li>
-                    Leading the design, implementation, and maintenance of
-                    DevOps infrastructure and tools, such as continuous
-                    integration and deployment (CI/CD) pipelines, monitoring and
-                    logging systems, and automation frameworks.
-                  </li>
+                  <br />
+                  Developing and implementing research strategies, and plans to
+                  support the organization's goals and objectives. Identifying
+                  <br />
+                  potential risks and challenges associated with R&D projects
+                  and developing mitigation strategies.
+                  <br />
+                  Leading a team of DevOps engineers, developers, and other
+                  professionals who are involved in DevOps R&D activities.
+                  <br />
+                  Leading the design, implementation, and maintenance of DevOps
+                  infrastructure and tools, such as continuous integration and
+                  deployment (CI/CD) pipelines, monitoring and logging systems,
+                  and automation frameworks.
+                  <br />
                 </p>
               </li>
 
@@ -635,60 +632,51 @@
                 <span>2019 — 2022</span>
 
                 <p class="timeline-text">
-                  <li>
-                    Shadi.com: Worked on shadi.com, managed their paltform for a
-                    quarter and improved deployment pipeline. Worked on AWS,
-                    Ansible, python and bash scripting, gitlab pipelines.
-                  </li>
-                  <li>
-                    Created a small project on ETL pipeline on AWS using S3,
-                    EC2, Lambda, RDS, and CloudWatch. Entire process was
-                    completely automated from data injestion to report
-                    generation.
-                  </li>
-                  <li>
-                    Bukalapak: Modernised and Migrated their legacy applications
-                    running on DataCentre to GCP on GKE clusters. Migrated
-                    around 30 microservices with zero down time. It was a really
-                    challenging project as taking down time was really tight
-                    during migration and applications were legacy application.
-                    Tools and technologies used were GCP, ELK Stack, Prometheus
-                    and Grafana Stack, Datadog, Cassandra Database, Kafka
-                    messaging system.
-                  </li>
-                  <li>
-                    Tokopedia: Worked on serivce migration. Wrote complete
-                    automation for service discovery as that was very crucial
-                    for service migration. As applications were legacy and
-                    nobody knew which service was connecting to what other
-                    service. Automation provided a really good view what
-                    component was talking to what. Automation mainly parsed
-                    application config files and network going in and out from
-                    application machines. Ansible, Python, Google Biq Query were
-                    heavily used.
-                  </li>
-                  <li>
-                    Coinswitch: Converted entire infrastructure to IAC using
-                    terraform. Converted their application pipelines from
-                    Jenkins toCLoud based build solution. It was also really
-                    challenging as we had to import existing infrastructure into
-                    IAC. Worked on IAC and Cloud Native Build and Deployment
-                    solution.
-                  </li>
-                  <li>
-                    Letsbloom: Worked as DevOps and Developement Delivery head.
-                    It was a really challenging project as I never worked on
-                    business side of thing apart from technical things. Worked
-                    360 degree on plaform. Wrote automation scripts for testing
-                    platform using REST API and Python. Improved IAC and build
-                    and Deployment pipeline. Improved security of platform.
-                    Developed few application for performing batch jobs. Worked
-                    on multi cloud AWS, Azure, and GCP. Used terraform and
-                    ansible heavily for automation and bash and python were also
-                    used heavily for automation. Used Self managed ELK and
-                    Prometheus stack, Hashicorp vault and lots of other tech
-                    stack. Can't discolse everything here
-                  </li>
+                  <br />
+                  Shadi.com: Worked on shadi.com, managed their paltform for a
+                  quarter and improved deployment pipeline. Worked on AWS,
+                  Ansible, python and bash scripting, gitlab pipelines. Created
+                  <br />
+                  a small project on ETL pipeline on AWS using S3, EC2, Lambda,
+                  RDS, and CloudWatch. Entire process was completely automated
+                  from data injestion to report generation. Bukalapak:
+                  <br />
+                  Modernised and Migrated their legacy applications running on
+                  DataCentre to GCP on GKE clusters. Migrated around 30
+                  microservices with zero down time. It was a really challenging
+                  project as taking down time was really tight during migration
+                  and applications were legacy application. Tools and
+                  technologies used were GCP, ELK Stack, Prometheus and Grafana
+                  Stack, Datadog, Cassandra Database, Kafka messaging system.
+                  <br />
+                  Tokopedia: Worked on serivce migration. Wrote complete
+                  automation for service discovery as that was very crucial for
+                  service migration. As applications were legacy and nobody knew
+                  which service was connecting to what other service. Automation
+                  provided a really good view what component was talking to
+                  what. Automation mainly parsed application config files and
+                  network going in and out from application machines. Ansible,
+                  Python, Google Biq Query were heavily used. Coinswitch:
+                  <br />
+                  Converted entire infrastructure to IAC using terraform.
+                  Converted their application pipelines from Jenkins toCLoud
+                  based build solution. It was also really challenging as we had
+                  to import existing infrastructure into IAC. Worked on IAC and
+                  Cloud Native Build and Deployment solution.
+                  <br />
+                  Letsbloom: Worked as DevOps and Developement Delivery head. It
+                  was a really challenging project as I never worked on business
+                  side of thing apart from technical things. Worked 360 degree
+                  on plaform. Wrote automation scripts for testing platform
+                  using REST API and Python. Improved IAC and build and
+                  Deployment pipeline. Improved security of platform. Developed
+                  few application for performing batch jobs. Worked on multi
+                  cloud AWS, Azure, and GCP. Used terraform and ansible heavily
+                  for automation and bash and python were also used heavily for
+                  automation. Used Self managed ELK and Prometheus stack,
+                  Hashicorp vault and lots of other tech stack. Can't discolse
+                  everything here
+                  <br />
                 </p>
               </li>
 
@@ -698,15 +686,13 @@
                 <span>2016 — 2018</span>
 
                 <p class="timeline-text">
-                  <li>
-                    Worked on ESIM for Vodafone UK. That was really challenging
-                    project as it was my first project. Worked heavily on AWS,
-                    Terraform, Jenkins, Ansible, python and bash scripting.
-                    Completely automated Build and Deployment pipelien.
-                    Implemented Logging using ELK and monitoring using
-                    CloudWatch.
-                  </li>
-                  <li></li>
+                  <br />
+                  Worked on ESIM for Vodafone UK. That was really challenging
+                  project as it was my first project. Worked heavily on AWS,
+                  Terraform, Jenkins, Ansible, python and bash scripting.
+                  Completely automated Build and Deployment pipelien.
+                  Implemented Logging using ELK and monitoring using CloudWatch.
+                  <br />
                 </p>
               </li>
             </ol>
