--- a/index.html
+++ b/index.html
@@ -580,7 +580,9 @@
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">New york academy of art</h4>
+                <h4 class="h4 timeline-item-title">
+                  Amrapali Institite Haldwani, Nainital
+                </h4>
 
                 <span>2010 — 2013</span>
 
@@ -809,16 +811,6 @@
                 </div>
               </li>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5"></h5>
-                  <data value="78">78%</data>
-                </div>
-
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 78%"></div>
-                </div>
-              </li>
               <li class="skills-item">
                 <div class="title-wrapper">
                   <h5 class="h5">Azure DevOps</h5>
