--- a/index.html
+++ b/index.html
@@ -189,18 +189,29 @@
 
           <section class="about-text">
             <p>
-              I'm Creative Director and UI/UX Designer from Sydney, Australia,
-              working in web development and print media. I enjoy turning
-              complex problems into simple, beautiful and intuitive designs.
+              I'm DevOps engineer from Delhi, India, working in DevOps and SRE.
+              I enjoy writing IAC for Cloud and Impelemting best DevOps
+              practices.My role typically involves managing the development and
+              deployment of software applications, as well as overseeing the
+              operations of the IT infrastructure. I am responsible for ensuring
+              that software releases are delivered on time and that the
+              infrastructure is maintained and updated to meet the needs of the
+              business.
             </p>
 
             <p>
-              My job is to build your website so that it is functional and
-              user-friendly but at the same time attractive. Moreover, I add
-              personal touch to your product and make sure that is eye-catching
-              and easy to use. My aim is to bring across your message and
-              identity in the most creative way. I created web design for many
-              famous brand companies.
+              To be successful in this role, you should have a strong technical
+              background in software development, operations, and automation.
+              You should also possess excellent leadership and communication
+              skills, as you will be responsible for managing a team of
+              developers and operations personnel.
+            </p>
+            <p>
+              Additionally, you should be familiar with DevOps methodologies and
+              tools, such as continuous integration and deployment (CI/CD),
+              containerization, and infrastructure as code (IaC). You should
+              also be knowledgeable about cloud computing platforms such as AWS,
+              Azure, or Google Cloud.
             </p>
           </section>
 
@@ -223,24 +234,17 @@
                 </div>
 
                 <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web design</h4>
+                  <h4 class="h4 service-item-title">DevOps</h4>
 
                   <p class="service-item-text">
-                    This channel is an excellent resource for anyone interested
-                    in learning about the fascinating world of computing.
-                    Channel will cover a wide range of topics related to
-                    computer science, including programming languages,
-                    algorithms, data structures, machine learning, artificial
-                    intelligence, computer architecture, operating systems,
-                    software engineering, and much more. The videos would use
-                    real-world examples and visual aids to illustrate abstract
-                    concepts, making them accessible to viewers of all levels of
-                    expertise. The channel will also feature interviews with
-                    leading experts in the field of computer science, who would
-                    share their insights and experiences with the audience.
-                    Additionally, the channel could host live Q&A sessions and
-                    interactive coding sessions to help viewers improve their
-                    skills and deepen their understanding of the subject matter.
+                    I'm DevOps engineer from Delhi, India, working in DevOps and
+                    SRE. I enjoy writing IAC for Cloud and Impelemting best
+                    DevOps practices.My role typically involves managing the
+                    development and deployment of software applications, as well
+                    as overseeing the operations of the IT infrastructure. I am
+                    responsible for ensuring that software releases are
+                    delivered on time and that the infrastructure is maintained
+                    and updated to meet the needs of the business.
                   </p>
                 </div>
               </li>
@@ -252,14 +256,6 @@
                     alt="Web development icon"
                     width="40"
                   />
-                </div>
-
-                <div class="service-content-box">
-                  <h4 class="h4 service-item-title">Web development</h4>
-
-                  <p class="service-item-text">
-                    High-quality development of sites at the professional level.
-                  </p>
                 </div>
               </li>
 
@@ -635,42 +631,44 @@
 
                 <p class="timeline-text">
                   <br />
-                  Shadi.com: Worked on shadi.com, managed their paltform for a
-                  quarter and improved deployment pipeline. Worked on AWS,
+                  <b> Shadi.com:</b> Worked on shadi.com, managed their paltform
+                  for a quarter and improved deployment pipeline. Worked on AWS,
                   Ansible, python and bash scripting, gitlab pipelines. Created
                   <br />
-                  a small project on ETL pipeline on AWS using S3, EC2, Lambda,
-                  RDS, and CloudWatch. Entire process was completely automated
-                  from data injestion to report generation. Bukalapak:
+                  <b> Envlve:</b> A small project on ETL pipeline on AWS using
+                  S3, EC2, Lambda, RDS, and CloudWatch. Entire process was
+                  completely automated from data injestion to report generation.
                   <br />
-                  Modernised and Migrated their legacy applications running on
-                  DataCentre to GCP on GKE clusters. Migrated around 30
-                  microservices with zero down time. It was a really challenging
-                  project as taking down time was really tight during migration
-                  and applications were legacy application. Tools and
-                  technologies used were GCP, ELK Stack, Prometheus and Grafana
-                  Stack, Datadog, Cassandra Database, Kafka messaging system.
+                  <b>Bukalapak:</b> Modernised and Migrated their legacy
+                  applications running on DataCentre to GCP on GKE clusters.
+                  Migrated around 30 microservices with zero down time. It was a
+                  really challenging project as taking down time was really
+                  tight during migration and applications were legacy
+                  application. Tools and technologies used were GCP, ELK Stack,
+                  Prometheus and Grafana Stack, Datadog, Cassandra Database,
+                  Kafka messaging system.
                   <br />
-                  Tokopedia: Worked on serivce migration. Wrote complete
+                  <b>Tokopedia:</b> Worked on serivce migration. Wrote complete
                   automation for service discovery as that was very crucial for
                   service migration. As applications were legacy and nobody knew
                   which service was connecting to what other service. Automation
                   provided a really good view what component was talking to
                   what. Automation mainly parsed application config files and
                   network going in and out from application machines. Ansible,
-                  Python, Google Biq Query were heavily used. Coinswitch:
+                  Python, Google Biq Query were heavily used.
                   <br />
-                  Converted entire infrastructure to IAC using terraform.
-                  Converted their application pipelines from Jenkins toCLoud
-                  based build solution. It was also really challenging as we had
-                  to import existing infrastructure into IAC. Worked on IAC and
-                  Cloud Native Build and Deployment solution.
+                  <b> Coinswitch:</b> Converted entire infrastructure to IAC
+                  using terraform. Converted their application pipelines from
+                  Jenkins toCLoud based build solution. It was also really
+                  challenging as we had to import existing infrastructure into
+                  IAC. Worked on IAC and Cloud Native Build and Deployment
+                  solution.
                   <br />
-                  Letsbloom: Worked as DevOps and Developement Delivery head. It
-                  was a really challenging project as I never worked on business
-                  side of thing apart from technical things. Worked 360 degree
-                  on plaform. Wrote automation scripts for testing platform
-                  using REST API and Python. Improved IAC and build and
+                  <b>Letsbloom:</b> Worked as DevOps and Developement Delivery
+                  head. It was a really challenging project as I never worked on
+                  business side of thing apart from technical things. Worked 360
+                  degree on plaform. Wrote automation scripts for testing
+                  platform using REST API and Python. Improved IAC and build and
                   Deployment pipeline. Improved security of platform. Developed
                   few application for performing batch jobs. Worked on multi
                   cloud AWS, Azure, and GCP. Used terraform and ansible heavily
@@ -689,11 +687,12 @@
 
                 <p class="timeline-text">
                   <br />
-                  Worked on ESIM for Vodafone UK. That was really challenging
-                  project as it was my first project. Worked heavily on AWS,
-                  Terraform, Jenkins, Ansible, python and bash scripting.
-                  Completely automated Build and Deployment pipelien.
-                  Implemented Logging using ELK and monitoring using CloudWatch.
+                  <b>ESIM Vodaform UK: </b> Worked on ESIM for Vodafone UK. That
+                  was really challenging project as it was my first project.
+                  Worked heavily on AWS, Terraform, Jenkins, Ansible, python and
+                  bash scripting. Completely automated Build and Deployment
+                  pipelien. Implemented Logging using ELK and monitoring using
+                  CloudWatch.
                   <br />
                 </p>
               </li>
